2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el: Require mouse, which the build bot seems to say is
	needed.

	* gravatar.el (gravatar-retrieve-synchronously): Use `url-retrieve' on
	XEmacs, since it doesn't have url-retrieve-synchronously.

2011-03-17  Antoine Levitt  <antoine.levitt@gmail.com>

	* gnus-group.el (gnus-group-list-ticked): New function.
	(gnus-group-make-menu-bar): Provide a menu entry for it.
	(gnus-group-list-map): Provide a binding for it.

2011-03-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): New command.

	* nnimap.el (nnimap-fetch-inbox): Rewrite slightly last patch.

2011-03-17  Bjørn Mork  <bjorn@mork.no>

	* nnimap.el (nnimap-fetch-inbox): Don't download bodies on ver4-capable
	servers.

2011-03-16  Julien Danjou  <julien@danjou.info>

	* mm-uu.el (mm-uu-dissect-text-parts): Only dissect handle that are
	inline.

	* gnus-art.el (article-hide-list-identifiers): Use
	gnus-group-get-list-identifiers.

	* gnus-sum.el (gnus-group-get-list-identifiers): New function.
	(gnus-summary-remove-list-identifiers): Use
	gnus-group-get-list-identifiers to get regexp.
	(gnus-select-newsgroup, gnus-summary-insert-subject)
	(gnus-summary-insert-articles): Call
	gnus-summary-remove-list-identifiers unconditionally.

2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-articles-to-read): Revert back to old behaviour if
	we're selecting a group with unread articles.

	* nnimap.el (nnimap-open-connection-1): Allow `network-only', too.

	* gssapi.el: New file separated out from imap.el to provide a general
	Kerberos 5 connection facility for Emacs.

	* message.el (message-elide-ellipsis): Document the format spec
	ellipsis.

2011-03-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-elide-region): Allow the ellipsis to say how many
	lines were removed.

2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>
